--- a/MÓDULO-1/lección-02-modelo-de-caja/css/main.css
+++ b/MÓDULO-1/lección-02-modelo-de-caja/css/main.css
@@ -42,53 +42,101 @@ section {
 }
 */
 
+
+
 .titulo {
   /*margin: 50px;
   margin-left: 500px;*/
 }
 
+
 .section {
-  /*margin: 50px;
+  /*margin: 50px;*/
   margin-top: 50px;
   margin-bottom: 40px;
   margin-left: 50px;
   margin-right: 30px;
-  margin: 50px 30px 40px 50px;
-  border: 5px solid black;*/
+  /*margin: 50px 30px 40px 50px;*/
+  border: 5px solid black;
 }
 
 .caja3 {
-  /*
-  padding: 50px;
-  border: 5px solid black;*/
+  margin-top: 50px;
+  margin-bottom: 40px;
+  margin-left: 50px;
+  margin-right: 30px;
+  border: 5px solid black;
+  width: 200px;
 }
 
 .caja1 {
-  /*
-  margin: 20px;
-  padding: 50px;
+  margin-top: 50px;
+  margin-bottom: 40px;
+  margin-left: 50px;
+  margin-right: 30px;
   border: 5px solid pink;
-  width: 400px;
-  float: left;*/
+  width: 200px;
+  /*float: left;*/
+}
+
+.caja4 {
+  margin-top: 50px;
+  margin-bottom: 40px;
+  margin-left: 50px;
+  margin-right: 30px;
+  border: 5px solid black;
+  width: 200px;
 }
 
 .caja2 {
-  /*
-  margin: 20px;
-  padding: 50px;
+  margin-top: 50px;
+  margin-bottom: 40px;
+  margin-left: 50px;
+  margin-right: 30px;
   border: 5px solid pink;
-  width: 400px;
-  float: right;*/
+  width: 200px;
+  /*float: inherit;
 }
+*/
 
-* {
-  /*
-  box-sizing: border-box;*/
-}
+/** {
+  box-sizing: border-box;
+}*/
 
+/*
 section {
   display: inline-block;
+}*/
+
+/*
+h2 {
+  display: inline-block;
 }
+
+p {
+  display: inline-block;
+}*/
+
+/*probando el display inline block*/
+
+/*.caja5 {
+  margin-top: 50px;
+  margin-bottom: 40px;
+  margin-left: 50px;
+  margin-right: 30px;
+  border: 5px solid #0ace4c;
+  width: 200px;
+}
+
+.caja6 {
+  margin-top: 50px;
+  margin-bottom: 40px;
+  margin-left: 50px;
+  margin-right: 30px;
+  border: 5px solid #0ace4c;
+  width: 200px;
+}
+  */
 
 h2 {
   display: inline-block;
